added error reporting for prediction counts

--- a/notebooks/asa/Pipeline.ipynb
+++ b/notebooks/asa/Pipeline.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "(14850, 2)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def submission_file_error_counts(df):\n",
+    "    a = df['status_group'].value_counts().rename_axis('status_group').reset_index(name='predicted_count')\n",
+    "    a.insert(1,'target_count',[8110,5672,1068])\n",
+    "    a['count_error'] = a['predicted_count'] - a['target_count']\n",
+    "    display(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,6 +123,8 @@
     "    y_pred = pd.DataFrame(data=y_pred_values, columns=[\"status_group\"])\n",
     "    y_pred.insert(0, 'id', ids)\n",
     "    \n",
+    "    submission_file_error_counts(y_pred)\n",
+    "    \n",
     "    filename = f'../../data/water_pump_submission_{next_file_id}_{filename_comment}.csv'\n",
     "    y_pred.to_csv(filename, index = False)\n",
     "    \n",
@@ -118,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +497,7 @@
        "4      functional  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,6 +505,82 @@
    "source": [
     "df = X_raw.merge(y, left_on = 'id', right_on = 'id')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>status_group</th>\n",
+       "      <th>target_count</th>\n",
+       "      <th>predicted_count</th>\n",
+       "      <th>count_error</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>functional</td>\n",
+       "      <td>8110</td>\n",
+       "      <td>32259</td>\n",
+       "      <td>24149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>non functional</td>\n",
+       "      <td>5672</td>\n",
+       "      <td>22824</td>\n",
+       "      <td>17152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>functional needs repair</td>\n",
+       "      <td>1068</td>\n",
+       "      <td>4317</td>\n",
+       "      <td>3249</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              status_group  target_count  predicted_count  count_error\n",
+       "0               functional          8110            32259        24149\n",
+       "1           non functional          5672            22824        17152\n",
+       "2  functional needs repair          1068             4317         3249"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a = df['status_group'].value_counts().rename_axis('status_group').reset_index(name='predicted_count')\n",
+    "a.insert(1,'target_count',[8110,5672,1068])\n",
+    "a['count_error'] = a['predicted_count'] - a['target_count']\n",
+    "display(a)\n"
    ]
   },
   {
@@ -506,12 +597,17 @@
     "Submission File has **14,850** rows.\n",
     "- Either 8109 or 8110 are 'functional' (score = 0.5461)\n",
     "- Either 5672 or 5673 are 'non functional' (score = 0.3820)\n",
-    "- (No file submitted on 3/2/21.)  1067, 1068 or 1069 are 'functional needs repair' (score est. to be 0.0719)"
+    "- Either 1067 or 1068 are 'functional needs repair' (score = 0.0719)\n",
+    "\n",
+    "Possible combos are:\n",
+    "- f=8109, nf=5673, fnr=1068\n",
+    "- f=8110, nf=5672, fnr=1068\n",
+    "- f=8110, nf=5673, fnr=1067"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +980,7 @@
        " 'construction_year']"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +1045,7 @@
    ],
    "source": [
     "cat_cols_raw = X_raw.select_dtypes('object').columns.tolist()\n",
-    "cat_cols = [a for a in cat_cols_raw if len(X[a].unique()) <= 25]\n",
+    "cat_cols = [a for a in cat_cols_raw if len(X_raw[a].unique()) <= 25]\n",
     "cat_cols_3 = cat_cols.copy()\n",
     "cat_cols_2 = cat_cols[:2]\n",
     "cat_cols_3.remove('permit')\n",
@@ -961,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +1066,7 @@
        "bool"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1096,7 @@
        "0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1109,28 +1205,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>11875</th>\n",
-       "      <td>26092</td>\n",
+       "      <th>0</th>\n",
+       "      <td>37098</td>\n",
        "      <td>functional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11876</th>\n",
-       "      <td>919</td>\n",
+       "      <th>1</th>\n",
+       "      <td>14530</td>\n",
        "      <td>functional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11877</th>\n",
-       "      <td>47444</td>\n",
+       "      <th>2</th>\n",
+       "      <td>62607</td>\n",
        "      <td>functional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11878</th>\n",
-       "      <td>61128</td>\n",
+       "      <th>3</th>\n",
+       "      <td>46053</td>\n",
        "      <td>non functional</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11879</th>\n",
-       "      <td>8075</td>\n",
+       "      <th>4</th>\n",
+       "      <td>47083</td>\n",
        "      <td>functional</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1138,15 +1234,15 @@
        "</div>"
       ],
       "text/plain": [
-       "          id    status_group\n",
-       "11875  26092      functional\n",
-       "11876    919      functional\n",
-       "11877  47444      functional\n",
-       "11878  61128  non functional\n",
-       "11879   8075      functional"
+       "      id    status_group\n",
+       "0  37098      functional\n",
+       "1  14530      functional\n",
+       "2  62607      functional\n",
+       "3  46053  non functional\n",
+       "4  47083      functional"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,16 +1251,80 @@
     "ids = X_val['id'].reset_index(drop=True)\n",
     "y_pred = pd.DataFrame(data=y_pred_values, columns=[\"status_group\"])\n",
     "y_pred.insert(0, 'id', ids)\n",
-    "y_pred.tail(5)"
+    "y_pred.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>status_group</th>\n",
+       "      <th>target_count</th>\n",
+       "      <th>predicted_count</th>\n",
+       "      <th>count_error</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>functional</td>\n",
+       "      <td>8110</td>\n",
+       "      <td>8848</td>\n",
+       "      <td>738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>non functional</td>\n",
+       "      <td>5672</td>\n",
+       "      <td>5363</td>\n",
+       "      <td>-309</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>functional needs repair</td>\n",
+       "      <td>1068</td>\n",
+       "      <td>639</td>\n",
+       "      <td>-429</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              status_group  target_count  predicted_count  count_error\n",
+       "0               functional          8110             8848          738\n",
+       "1           non functional          5672             5363         -309\n",
+       "2  functional needs repair          1068              639         -429"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "filename_comment = \"asdfasdfasdf\"\n",
+    "filename_comment = \"file_error_count_test\"\n",
     "y_pred, filename = create_submission_file(pipe, X_test_raw, filename_comment)"
    ]
   },
