minor code exploration

--- a/notebooks/asa/water_pump_eda.ipynb
+++ b/notebooks/asa/water_pump_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
        "4      surface           communal standpipe    communal standpipe  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -805,13 +805,429 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>amount_tsh</th>\n",
+       "      <th>date_recorded</th>\n",
+       "      <th>funder</th>\n",
+       "      <th>gps_height</th>\n",
+       "      <th>installer</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>wpt_name</th>\n",
+       "      <th>num_private</th>\n",
+       "      <th>basin</th>\n",
+       "      <th>subvillage</th>\n",
+       "      <th>region</th>\n",
+       "      <th>region_code</th>\n",
+       "      <th>district_code</th>\n",
+       "      <th>lga</th>\n",
+       "      <th>ward</th>\n",
+       "      <th>population</th>\n",
+       "      <th>public_meeting</th>\n",
+       "      <th>recorded_by</th>\n",
+       "      <th>scheme_management</th>\n",
+       "      <th>scheme_name</th>\n",
+       "      <th>permit</th>\n",
+       "      <th>construction_year</th>\n",
+       "      <th>extraction_type</th>\n",
+       "      <th>extraction_type_group</th>\n",
+       "      <th>extraction_type_class</th>\n",
+       "      <th>management</th>\n",
+       "      <th>management_group</th>\n",
+       "      <th>payment</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>water_quality</th>\n",
+       "      <th>quality_group</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>quantity_group</th>\n",
+       "      <th>source</th>\n",
+       "      <th>source_type</th>\n",
+       "      <th>source_class</th>\n",
+       "      <th>waterpoint_type</th>\n",
+       "      <th>waterpoint_type_group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>41583</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2011-02-23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>39.812912</td>\n",
+       "      <td>-7.889986</td>\n",
+       "      <td>Msikitini Wa Ijumaa</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Rufiji</td>\n",
+       "      <td>Kilombero B</td>\n",
+       "      <td>Pwani</td>\n",
+       "      <td>60</td>\n",
+       "      <td>63</td>\n",
+       "      <td>Mafia</td>\n",
+       "      <td>Baleni</td>\n",
+       "      <td>100</td>\n",
+       "      <td>True</td>\n",
+       "      <td>GeoData Consultants Ltd</td>\n",
+       "      <td>VWC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>nira/tanira</td>\n",
+       "      <td>nira/tanira</td>\n",
+       "      <td>handpump</td>\n",
+       "      <td>vwc</td>\n",
+       "      <td>user-group</td>\n",
+       "      <td>never pay</td>\n",
+       "      <td>never pay</td>\n",
+       "      <td>salty</td>\n",
+       "      <td>salty</td>\n",
+       "      <td>enough</td>\n",
+       "      <td>enough</td>\n",
+       "      <td>shallow well</td>\n",
+       "      <td>shallow well</td>\n",
+       "      <td>groundwater</td>\n",
+       "      <td>hand pump</td>\n",
+       "      <td>hand pump</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>19282</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013-01-15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1642</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.967789</td>\n",
+       "      <td>-4.628921</td>\n",
+       "      <td>Mvae Primary</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Internal</td>\n",
+       "      <td>Mwarufyu</td>\n",
+       "      <td>Singida</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Singida Rural</td>\n",
+       "      <td>Merya</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>GeoData Consultants Ltd</td>\n",
+       "      <td>VWC</td>\n",
+       "      <td>K</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>mono</td>\n",
+       "      <td>mono</td>\n",
+       "      <td>motorpump</td>\n",
+       "      <td>vwc</td>\n",
+       "      <td>user-group</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>dry</td>\n",
+       "      <td>dry</td>\n",
+       "      <td>machine dbh</td>\n",
+       "      <td>borehole</td>\n",
+       "      <td>groundwater</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>13620</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2011-07-27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>33.540607</td>\n",
+       "      <td>-9.172905</td>\n",
+       "      <td>Mahakamani</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Lake Nyasa</td>\n",
+       "      <td>Mpandapanda</td>\n",
+       "      <td>Mbeya</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Rungwe</td>\n",
+       "      <td>Kiwira</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>GeoData Consultants Ltd</td>\n",
+       "      <td>VWC</td>\n",
+       "      <td>K</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>gravity</td>\n",
+       "      <td>gravity</td>\n",
+       "      <td>gravity</td>\n",
+       "      <td>vwc</td>\n",
+       "      <td>user-group</td>\n",
+       "      <td>never pay</td>\n",
+       "      <td>never pay</td>\n",
+       "      <td>soft</td>\n",
+       "      <td>good</td>\n",
+       "      <td>enough</td>\n",
+       "      <td>enough</td>\n",
+       "      <td>spring</td>\n",
+       "      <td>spring</td>\n",
+       "      <td>groundwater</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>51072</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2013-02-09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1415</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.621598</td>\n",
+       "      <td>-5.173136</td>\n",
+       "      <td>Nyambi</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Internal</td>\n",
+       "      <td>Mfumbu</td>\n",
+       "      <td>Singida</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Singida Rural</td>\n",
+       "      <td>Naintiri</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>GeoData Consultants Ltd</td>\n",
+       "      <td>VWC</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>mono</td>\n",
+       "      <td>mono</td>\n",
+       "      <td>motorpump</td>\n",
+       "      <td>vwc</td>\n",
+       "      <td>user-group</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>dry</td>\n",
+       "      <td>dry</td>\n",
+       "      <td>machine dbh</td>\n",
+       "      <td>borehole</td>\n",
+       "      <td>groundwater</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>17386</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2011-03-31</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.462228</td>\n",
+       "      <td>-8.575780</td>\n",
+       "      <td>Kwa Manyusi Mlilo</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Rufiji</td>\n",
+       "      <td>Lembuka</td>\n",
+       "      <td>Mbeya</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Mbarali</td>\n",
+       "      <td>Mawindi</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>GeoData Consultants Ltd</td>\n",
+       "      <td>VWC</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>gravity</td>\n",
+       "      <td>gravity</td>\n",
+       "      <td>gravity</td>\n",
+       "      <td>vwc</td>\n",
+       "      <td>user-group</td>\n",
+       "      <td>never pay</td>\n",
+       "      <td>never pay</td>\n",
+       "      <td>soft</td>\n",
+       "      <td>good</td>\n",
+       "      <td>insufficient</td>\n",
+       "      <td>insufficient</td>\n",
+       "      <td>river</td>\n",
+       "      <td>river/lake</td>\n",
+       "      <td>surface</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "      <td>communal standpipe</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id  amount_tsh date_recorded funder  gps_height installer  longitude  \\\n",
+       "34  41583         0.0    2011-02-23    NaN         -41       NaN  39.812912   \n",
+       "43  19282         0.0    2013-01-15    NaN        1642       NaN  34.967789   \n",
+       "47  13620         0.0    2011-07-27    NaN           0       NaN  33.540607   \n",
+       "65  51072         0.0    2013-02-09    NaN        1415       NaN  34.621598   \n",
+       "71  17386         0.0    2011-03-31    NaN           0       NaN  34.462228   \n",
+       "\n",
+       "    latitude             wpt_name  num_private       basin   subvillage  \\\n",
+       "34 -7.889986  Msikitini Wa Ijumaa            0      Rufiji  Kilombero B   \n",
+       "43 -4.628921         Mvae Primary            0    Internal     Mwarufyu   \n",
+       "47 -9.172905           Mahakamani            0  Lake Nyasa  Mpandapanda   \n",
+       "65 -5.173136               Nyambi            0    Internal       Mfumbu   \n",
+       "71 -8.575780    Kwa Manyusi Mlilo            0      Rufiji      Lembuka   \n",
+       "\n",
+       "     region  region_code  district_code            lga      ward  population  \\\n",
+       "34    Pwani           60             63          Mafia    Baleni         100   \n",
+       "43  Singida           13              2  Singida Rural     Merya           1   \n",
+       "47    Mbeya           12              4         Rungwe    Kiwira           0   \n",
+       "65  Singida           13              2  Singida Rural  Naintiri           1   \n",
+       "71    Mbeya           12              7        Mbarali   Mawindi           0   \n",
+       "\n",
+       "   public_meeting              recorded_by scheme_management scheme_name  \\\n",
+       "34           True  GeoData Consultants Ltd               VWC         NaN   \n",
+       "43           True  GeoData Consultants Ltd               VWC           K   \n",
+       "47           True  GeoData Consultants Ltd               VWC           K   \n",
+       "65           True  GeoData Consultants Ltd               VWC           M   \n",
+       "71           True  GeoData Consultants Ltd               VWC         NaN   \n",
+       "\n",
+       "   permit  construction_year extraction_type extraction_type_group  \\\n",
+       "34  False                  0     nira/tanira           nira/tanira   \n",
+       "43    NaN               1980            mono                  mono   \n",
+       "47    NaN                  0         gravity               gravity   \n",
+       "65    NaN               1970            mono                  mono   \n",
+       "71  False                  0         gravity               gravity   \n",
+       "\n",
+       "   extraction_type_class management management_group    payment payment_type  \\\n",
+       "34              handpump        vwc       user-group  never pay    never pay   \n",
+       "43             motorpump        vwc       user-group    unknown      unknown   \n",
+       "47               gravity        vwc       user-group  never pay    never pay   \n",
+       "65             motorpump        vwc       user-group    unknown      unknown   \n",
+       "71               gravity        vwc       user-group  never pay    never pay   \n",
+       "\n",
+       "   water_quality quality_group      quantity quantity_group        source  \\\n",
+       "34         salty         salty        enough         enough  shallow well   \n",
+       "43       unknown       unknown           dry            dry   machine dbh   \n",
+       "47          soft          good        enough         enough        spring   \n",
+       "65       unknown       unknown           dry            dry   machine dbh   \n",
+       "71          soft          good  insufficient   insufficient         river   \n",
+       "\n",
+       "     source_type source_class     waterpoint_type waterpoint_type_group  \n",
+       "34  shallow well  groundwater           hand pump             hand pump  \n",
+       "43      borehole  groundwater  communal standpipe    communal standpipe  \n",
+       "47        spring  groundwater  communal standpipe    communal standpipe  \n",
+       "65      borehole  groundwater  communal standpipe    communal standpipe  \n",
+       "71    river/lake      surface  communal standpipe    communal standpipe  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "funder_missing = X[X['funder'].isnull()]\n",
+    "funder_missing.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                          0\n",
+       "amount_tsh                  0\n",
+       "date_recorded               0\n",
+       "funder                   3635\n",
+       "gps_height                  0\n",
+       "installer                3582\n",
+       "longitude                   0\n",
+       "latitude                    0\n",
+       "wpt_name                    0\n",
+       "num_private                 0\n",
+       "basin                       0\n",
+       "subvillage                  0\n",
+       "region                      0\n",
+       "region_code                 0\n",
+       "district_code               0\n",
+       "lga                         0\n",
+       "ward                        0\n",
+       "population                  0\n",
+       "public_meeting            198\n",
+       "recorded_by                 0\n",
+       "scheme_management          46\n",
+       "scheme_name              1793\n",
+       "permit                   2418\n",
+       "construction_year           0\n",
+       "extraction_type             0\n",
+       "extraction_type_group       0\n",
+       "extraction_type_class       0\n",
+       "management                  0\n",
+       "management_group            0\n",
+       "payment                     0\n",
+       "payment_type                0\n",
+       "water_quality               0\n",
+       "quality_group               0\n",
+       "quantity                    0\n",
+       "quantity_group              0\n",
+       "source                      0\n",
+       "source_type                 0\n",
+       "source_class                0\n",
+       "waterpoint_type             0\n",
+       "waterpoint_type_group       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "funder_missing.isnull().sum()"
    ]
   },
   {
